test/src/e2e_vm_tests/test_programs/should_fail/abi_ref_mut/src/main.sw
contract;

abi MyContract {
    fn test_function(p: u64);
}

impl MyContract for Contract {
    fn test_function(ref mut p: u64) {

    }
}
